--- a/resources/scss/manon/button/button-ghost.scss
+++ b/resources/scss/manon/button/button-ghost.scss
@@ -1,7 +1,7 @@
 /*---------------------------------------------------------------*/
 /*--------------------- button-ghost.scss -----------------------*/
 /*---------------------------------------------------------------*/
-@import "button-ghost-variables";
+@use "button-ghost-variables";
 
 button,
 a.button,
