--- a/resources/scss/manon/text-styling/p-base.scss
+++ b/resources/scss/manon/text-styling/p-base.scss
@@ -1,7 +1,7 @@
 /*---------------------------------------------------------------*/
 /*--------------------- components/p.scss -----------------------*/
 /*---------------------------------------------------------------*/
-@import "p-base-variables";
+@use "p-base-variables";
 
 p {
 	margin: 0;
