--- a/resources/scss/manon/button/button-base-variables.scss
+++ b/resources/scss/manon/button/button-base-variables.scss
@@ -3,11 +3,15 @@
 /*---------------------------------------------------------------*/
 :root {
 	/* Button */
-	/* --button-base-flex: ; */
-	/* --button-base-gap: ; */
-	/* --button-base-padding: ; */
-	/* --button-base-min-width: ; */
-	/* --button-base-min-height: ; */
+	--button-base-flex: inline-flex;
+	--button-base-gap: 0.5rem;
+	--button-base-padding-top: 0.25rem;
+	--button-base-padding-right:1rem;
+	--button-base-padding-bottom: 0.25rem;
+	--button-base-padding-left: 1rem;
+	--button-base-justify-content: center;
+	--button-base-min-width: 8rem;
+	--button-base-min-height: 2.75rem;
 	--button-base-background-color: var(--application-base-accent-color);
 	--button-base-text-color: var(--application-base-accent-color-text-color);
 	/* --button-base-border-width: ; */
@@ -15,8 +19,14 @@
 	/* --button-base-border-color: ; */
 	/* --button-base-font-size: ; */
 	/* --button-base-line-height: ; */
-	/* --button-base-text-decoration: ; */
-	/* --button-base-border-radius: ; */
+	/* --button-base-font-weight: ; */
+	--button-base-text-decoration: none;
+	--button-base-border-radius: var(--application-base-border-radius);
+
+	/* Reset ios button styling */
+	/* --button-base-webkit-appearance: none; */
+
+	--button-base-align-self: flex-end;
 
 	/* Hover */
 	--button-base-hover-background-color: var(
