--- a/resources/scss/manon/layout/layout-base-variables.scss
+++ b/resources/scss/manon/layout/layout-base-variables.scss
@@ -3,24 +3,36 @@
 /*------------------------------------------------------------------------*/
 :root {
 	--layout-base-max-width: 100%;
-	--layout-base-padding:0;
+	--layout-base-padding-top: 0;
+	--layout-base-padding-right: 3%;
+	--layout-base-padding-bottom: 0;
+	--layout-base-padding-left: 3%;
 	--layout-base-margin: 0;
 	--layout-base-align-items: center;
 	--layout-base-justify-content: center;
-	/*--layout-base-gap: ; */
+	--layout-base-gap: 2rem;
 
 	/* After breakpoint 1 */
 	--layout-base-after-breakpoint-1-max-width: var(--layout-base-max-width);
-	--layout-base-after-breakpoint-1-padding: var(--layout-base-padding);
+	--layout-base-after-breakpoint-1-padding-top: var(--layout-base-padding-top);
+	--layout-base-after-breakpoint-1-padding-right: var(--layout-base-padding-right);
+	--layout-base-after-breakpoint-1-padding-bottom: var(--layout-base-padding-bottom);
+	--layout-base-after-breakpoint-1-padding-left: var(--layout-base-padding-left);
 	--layout-base-after-breakpoint-1-margin: var(--layout-base-margin);
 
 	/* After breakpoint 2 */
 	--layout-base-after-breakpoint-2-max-width: var(--layout-base-max-width);
-	--layout-base-after-breakpoint-2-padding: var(--layout-base-after-breakpoint-1-padding);
+	--layout-base-after-breakpoint-2-padding-top: var(--layout-base-after-breakpoint-1-padding-top);
+	--layout-base-after-breakpoint-2-padding-right: var(--layout-base-after-breakpoint-1-padding-right);
+	--layout-base-after-breakpoint-2-padding-bottom: var(--layout-base-after-breakpoint-1-padding-bottom);
+	--layout-base-after-breakpoint-2-padding-left: var(--layout-base-after-breakpoint-1-padding-left);
 	--layout-base-after-breakpoint-2-margin: var(--layout-base-margin);
 
 	/* Content blocks (div within article, section, header nav and footer) */
-	--layout-base-content-block-padding: 0;
+	--layout-base-content-block-padding-top: 0;
+	--layout-base-content-block-padding-right: 0;
+	--layout-base-content-block-padding-bottom: 0;
+	--layout-base-content-block-padding-left: 0;
 	--layout-base-content-block-max-width: 73rem;
 	--layout-base-content-block-align-items: flex-start;
 	--layout-base-content-block-gap: 1.5rem;
@@ -32,14 +44,50 @@
 	--layout-base-content-block-subtitle-margin: 1.5rem 0;
 
 	/* After breakpoint 1 */
-	--layout-base-content-block-breakpoint-1-padding: var(
-		--layout-base-content-block-padding,
-		var(--layout-base-content-block-padding)
+	--layout-base-content-block-breakpoint-1-padding-top: var(
+		--layout-base-content-block-padding-top,
+		var(--layout-base-content-block-padding-top)
+	);
+
+	--layout-base-content-block-breakpoint-1-padding-right: var(
+		--layout-base-content-block-padding-right,
+		var(--layout-base-content-block-padding-right)
+	);
+
+	--layout-base-content-block-breakpoint-1-padding-bottom: var(
+		--layout-base-content-block-padding-bottom,
+		var(--layout-base-content-block-padding-bottom)
+	);
+
+	--layout-base-content-block-breakpoint-1-padding-left: var(
+		--layout-base-content-block-padding-left,
+		var(--layout-base-content-block-padding-left)
 	);
 
 	/* After breakpoint 2 */
-	--layout-base-content-block-breakpoint-2-padding: var(
-		--layout-base-content-block-breakpoint-1-padding,
-		var(--layout-base-content-block-breakpoint-1-padding)
+	--layout-base-content-block-breakpoint-2-padding-top: var(
+		--layout-base-content-block-breakpoint-1-padding-top,
+		var(--layout-base-content-block-breakpoint-1-padding-top)
+	);
+
+	--layout-base-content-block-breakpoint-2-padding-right: var(
+		--layout-base-content-block-breakpoint-1-padding-right,
+		var(--layout-base-content-block-breakpoint-1-padding-right)
+	);
+
+	--layout-base-content-block-breakpoint-2-padding-bottom: var(
+		--layout-base-content-block-breakpoint-1-padding-bottom,
+		var(--layout-base-content-block-breakpoint-1-padding-bottom)
+	);
+
+	--layout-base-content-block-breakpoint-2-padding-left: var(
+		--layout-base-content-block-breakpoint-1-padding-left,
+		var(--layout-base-content-block-breakpoint-1-padding-left)
 	);
 }
+
+/* Breakpoints */
+$layout-base-breakpoint-1: 24rem;
+$layout-base-breakpoint-2: 75rem;
+$layout-base-content-block-breakpoint-1: 24rem;
+$layout-base-content-block-breakpoint-2: 75rem;
