--- a/resources/scss/manon/layout/layout-base.scss
+++ b/resources/scss/manon/layout/layout-base.scss
@@ -1,8 +1,7 @@
 /*---------------------------------------------------------------*/
 /*----------------- components/layout-base.scss -----------------*/
 /*---------------------------------------------------------------*/
-@import "layout-base-breakpoints";
-@import "layout-base-variables";
+@use "layout-base-variables";
 
 main > section,
 main > article,
@@ -14,18 +13,28 @@ footer {
 	max-width: var(--layout-base-max-width);
 	align-items: var(--layout-base-align-items);
 	justify-content: var(--layout-base-justify-content);
-	padding: var(--layout-base-padding);
+	padding-top: var(--layout-base-padding-top);
+	padding-right: var(--layout-base-padding-right);
+	padding-bottom: var(--layout-base-padding-bottom);
+	padding-left: var(--layout-base-padding-left);
 	gap: var(--layout-base-gap);
+	box-sizing: border-box;
 
-	@media (min-width: $layout-base-breakpoint-1) {
+	@media (min-width: layout-base-variables.$layout-base-breakpoint-1) {
 		max-width: var(--layout-base-after-breakpoint-1-max-width);
-		padding: var(--layout-base-after-breakpoint-1-padding);
+		padding-top: var(--layout-base-after-breakpoint-1-padding-top);
+		padding-right: var(--layout-base-after-breakpoint-1-padding-right);
+		padding-bottom: var(--layout-base-after-breakpoint-1-padding-bottom);
+		padding-left: var(--layout-base-after-breakpoint-1-padding-left);
 		margin: var(--layout-base-after-breakpoint-1-margin);
 	}
 
-	@media (min-width: $layout-base-breakpoint-2) {
+	@media (min-width: layout-base-variables.$layout-base-breakpoint-2) {
 		max-width: var(--layout-base-after-breakpoint-2-max-width);
-		padding: var(--layout-base-after-breakpoint-2-padding);
+		padding-top: var(--layout-base-after-breakpoint-2-padding-top);
+		padding-right: var(--layout-base-after-breakpoint-2-padding-right);
+		padding-bottom: var(--layout-base-after-breakpoint-2-padding-bottom);
+		padding-left: var(--layout-base-after-breakpoint-2-padding-left);
 		margin: var(--layout-base-after-breakpoint-2-margin);
 	}
 
@@ -35,7 +44,10 @@ footer {
 		align-items: var(--layout-base-content-block-align-items);
 		flex-grow: 1;
 		width: 100%;
-		padding: var(--layout-base-content-block-padding);
+		padding-top: var(--layout-base-content-block-padding-top);
+		padding-right: var(--layout-base-content-block-padding-right);
+		padding-bottom: var(--layout-base-content-block-padding-bottom);
+		padding-left: var(--layout-base-content-block-padding-left);
 		box-sizing: border-box;
 		max-width: var(--layout-base-content-block-max-width);
 		margin: 0 auto;
@@ -53,12 +65,18 @@ footer {
 			gap: var(--layout-base-content-block-gap);
 		}
 
-		@media (min-width: $layout-base-breakpoint-1) {
-			padding: var(--layout-base-content-block-breakpoint-1-padding);
+		@media (min-width: layout-base-variables.$layout-base-breakpoint-1) {
+			padding-top: var(--layout-base-content-block-breakpoint-1-padding-top);
+			padding-right: var(--layout-base-content-block-breakpoint-1-padding-right);
+			padding-bottom: var(--layout-base-content-block-breakpoint-1-padding-bottom);
+			padding-left: var(--layout-base-content-block-breakpoint-1-padding-left);
 		}
 
-		@media (min-width: $layout-base-breakpoint-2) {
-			padding: var(--layout-base-content-block-breakpoint-2-padding);
+		@media (min-width: layout-base-variables.$layout-base-breakpoint-2) {
+			padding-top: var(--layout-base-content-block-breakpoint-2-padding-top);
+			padding-right: var(--layout-base-content-block-breakpoint-2-padding-right);
+			padding-bottom: var(--layout-base-content-block-breakpoint-2-padding-bottom);
+			padding-left: var(--layout-base-content-block-breakpoint-2-padding-left);
 		}
 	}
 }
