--- a/resources/scss/manon/states/focus.scss
+++ b/resources/scss/manon/states/focus.scss
@@ -4,14 +4,14 @@
 *:focus,
 *.focus,
 .outline-dotted {
-	outline: 2px dotted #000;
-	outline-offset: 0.25rem; /* Adding some spacing between the content and the outline */
-	z-index: 1; /* Laying the focussed area on top of any follow up messages */
+	outline: var(--focus-outline);
+	outline-offset: var(--focus-outline-offset);
+	z-index: var(--focus-z-index);
 	position: relative;
 
 	+ label:before {
-		outline: 2px dotted #000;
-		z-index: 1; /* Laying the focussed area on top of any follow up messages */
+		outline: var(--focus-outline);
+		z-index: var(--focus-z-index);
 		position: relative;
 	}
 }
