feat: language picker

--- a/resources/scss/overrides/header.scss
+++ b/resources/scss/overrides/header.scss
@@ -2,6 +2,8 @@ $breakpoint: 34rem !default;
 
 body > header > div {
   background: #fff;
+  flex-direction: row;
+  justify-content: space-between;
 
   @media (min-width: $breakpoint) {
     padding-right: 2rem;
