--- a/resources/scss/variables.scss
+++ b/resources/scss/variables.scss
@@ -22,6 +22,9 @@
   --headings-h1-line-height: 1.75rem;
   --headings-h2-line-height: 1.5rem;
   --headings-h3-line-height: 1.5rem;
+  --headings-h1-text-color: var(--application-base-accent-color);
+  --headings-h2-text-color: var(--application-base-accent-color);
+  --headings-h3-text-color: var(--application-base-accent-color);
 
   --layout-main-content-block-max-width: 34rem;
   --layout-header-content-block-max-width: 34rem;
