fix: split birthdate

--- a/resources/scss/fonts.scss
+++ b/resources/scss/fonts.scss
@@ -21,7 +21,7 @@
   src: url("/fonts/ggd-pap-icons-v1.ttf") format("truetype"),
     url("/fonts/ggd-pap-icons-v1.woff") format("woff"),
     url("/fonts/ggd-pap-icons-v1.svg#ggd-pap-icons") format("svg");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
   font-display: swap; /* this icon font has decent fallbacks (^, v, <, >) */
 }
