--- a/resources/scss/variables.scss
+++ b/resources/scss/variables.scss
@@ -60,6 +60,10 @@
   --form-input-border-radius: 0.25rem;
   --form-input-font-weight: 400;
 
+  --form-input-error-border-color: #b30900;
+
+  --form-fieldset-legend-margin-bottom: 0.5rem;
+
   --button-base-font-weight: 600;
   --button-base-padding-top: 0.75rem;
   --button-base-padding-right: 1.5rem;
