--- a/resources/scss/language.scss
+++ b/resources/scss/language.scss
@@ -8,12 +8,12 @@
     font-weight: var(--headings-h2-font-weight);
     text-decoration: none;
     word-break: normal;
-    padding: 0.5rem;
-    margin: -0.5rem;
+    padding: 0rem 0.5rem;
+    border-bottom: 2px solid #fff;
 
     &[aria-current="page"],
     &:hover {
-      text-decoration: underline;
+      border-bottom: 2px solid var(--application-base-accent-color);
     }
 
     &:focus {
