fix: avoid extra info retrieval, update fallback button text

--- a/resources/scss/overrides/form-button.scss
+++ b/resources/scss/overrides/form-button.scss
@@ -1,9 +1,5 @@
 form {
-  button,
-  a.button,
-  input[type="button"],
-  input[type="submit"],
-  input[type="reset"] {
+  button[type="submit"]:first-of-type {
     margin-top: 1rem;
   }
 }
